# sox4android

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/jni/: Android.mk  Application.mk  audio_effect.cpp  audio_effect.h  example5.cpp  example5.h  logger.h  memory.cpp  memory.h  native-lib.cpp  native-lib.h  native_sox.cpp  native_sox.h
app/jni/include/: native_sox.h  soxconfig.h
app/jni/src/: native_sox.cpp
app/src/androidTest/java/com/onzhou/sox4android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: input.pcm
app/src/main/assets/files/: input.pcm  output.pcm
app/src/main/assets/files/files/: input.pcm  output.pcm
app/src/main/cpp/: audio_effect.cpp  audio_effect.h  native-lib.cpp  native_sox.cpp  native_sox.h
app/src/main/java/com/onzhou/sox4android/: MainActivity.java
app/src/main/java/com/onzhou/sox4android/audio/: AudioMixer.java  AudioRecordRecorder.java  AudioReverbRecorder.java  AudioTrackManager.java  IAudioMixer.java  IAudioRecorder.java  OnAudioMixListener.java  OnEncodeListener.java  ReverbParam.java  WavEncoder.java  WaveHeader.java
app/src/main/java/com/onzhou/sox4android/main/: MainActivity.java
app/src/main/java/com/onzhou/sox4android/sox/: NativeSox.java
app/src/main/java/com/onzhou/sox4android/task/: AssertReleaseTask.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/onzhou/sox4android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
